--- a/Docker-files/web/Dockerfile
+++ b/Docker-files/web/Dockerfile
@@ -3,4 +3,4 @@ LABEL "project"="Vprofile"
 LABEL "Author"="Imran"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY nginvpropapp.conf /etc/nginx/conf.d/vproapp.conf
+COPY nginvproapp.conf /etc/nginx/conf.d/vproapp.conf
